--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -656,7 +656,7 @@
                 }
             ],
             "source": [
-                "# Merge tables for creating a new DataFrame\n",
+                "# Fusiona tablas para crear nuevo DataFrame\n",
                 "\n",
                 "query = \"\"\"\n",
                 "    SELECT *\n",
@@ -974,7 +974,7 @@
                 "    else:\n",
                 "        return []\n",
                 "\n",
-                "# Suponiendo que total_data es tu DataFrame\n",
+                "\n",
                 "total_data['genres'] = total_data['genres'].apply(process_genres)\n",
                 "total_data['keywords'] = total_data['keywords'].apply(process_keywords)\n",
                 "total_data['cast'] = total_data['cast'].apply(process_cast)\n",
@@ -986,9 +986,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 6,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "'\\nimport json\\n\\ndef load_json_safe(json_str, default_value = None):\\n    try:\\n        return json.loads(json_str)\\n    except (TypeError, json.JSONDecodeError):\\n        return default_value\\n    \\ntotal_data[\"genres\"] = total_data[\"genres\"].apply(lambda x: [item[\"name\"] for item in json.loads(x)] if pd.notna(x) else None)\\ntotal_data[\"keywords\"] = total_data[\"keywords\"].apply(lambda x: [item[\"name\"] for item in json.loads(x)] if pd.notna(x) else None)\\n\\ntotal_data[\"cast\"] = total_data[\"cast\"].apply(lambda x: [item[\"name\"] for item in json.loads(x)][:3] if pd.notna(x) else None)\\n\\ntotal_data[\"crew\"] = total_data[\"crew\"].apply(lambda x: \" \".join([crew_member[\\'name\\'] for crew_member in load_json_safe(x) if crew_member[\\'job\\'] == \\'Director\\']))\\n\\ntotal_data[\"overview\"] = total_data[\"overview\"].apply(lambda x: [x])\\n\\ntotal_data.head()'"
+                        ]
+                    },
+                    "execution_count": 6,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
                 "# Metodo alternativo de transformar los datos\n",
                 "\"\"\"\n",
@@ -1014,7 +1025,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1032,7 +1043,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
@@ -1433,7 +1444,7 @@
                             "[4809 rows x 19 columns]"
                         ]
                     },
-                    "execution_count": 15,
+                    "execution_count": 8,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1444,7 +1455,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -1453,7 +1464,7 @@
                             "\"['In the 22nd century  a paraplegic Marine is dispatched to the moon Pandora on a unique mission  but becomes torn between following orders and protecting an alien civilization.'] Action Adventure Fantasy Science Fiction culture clash future space war space colony society space travel futuristic romance space alien tribe alien planet cgi marine soldier battle love affair anti war power relations mind and soul 3d Sam Worthington Zoe Saldana Sigourney Weaver J a m e s   C a m e r o n\""
                         ]
                     },
-                    "execution_count": 7,
+                    "execution_count": 9,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1464,7 +1475,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
@@ -1473,7 +1484,7 @@
                             "\"['Captain Barbossa  long believed to be dead  has come back to life and is headed to the edge of the Earth with Will Turner and Elizabeth Swann. But nothing is quite as it seems.'] Adventure Fantasy Action ocean drug abuse exotic island east india trading company love of one's life traitor shipwreck strong woman ship alliance calypso afterlife fighter pirate swashbuckler aftercreditsstinger Johnny Depp Orlando Bloom Keira Knightley G o r e   V e r b i n s k i\""
                         ]
                     },
-                    "execution_count": 8,
+                    "execution_count": 10,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1484,7 +1495,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -1493,7 +1504,7 @@
                             "4809"
                         ]
                     },
-                    "execution_count": 9,
+                    "execution_count": 11,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1508,7 +1519,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
